# claude-skills

./: .gitignore
arxiv-eai-daily/: INSTALL.md  SKILL.md  config.yaml  pyproject.toml  requirements.txt
arxiv-eai-daily/arxiv_eai_daily_20260320_0942/: summary.md
arxiv-eai-daily/arxiv_eai_daily_20260320_0942/summaries/: 2603.18363v1_summary.md  2603.18370v1_summary.md  2603.18396v1_summary.md  2603.18400v1_summary.md  2603.18408v1_summary.md  2603.18418v1_summary.md  2603.18428v1_summary.md  2603.18444v1_summary.md  2603.18462v1_summary.md  2603.18472v1_summary.md  2603.18480v1_summary.md  2603.18494v1_summary.md  2603.18495v1_summary.md  2603.18508v1_summary.md  2603.18520v1_summary.md  2603.18523v1_summary.md  2603.18532v1_summary.md  2603.18545v1_summary.md  2603.18558v1_summary.md  2603.18577v1_summary.md  2603.18620v1_summary.md  2603.18627v1_summary.md  2603.18656v1_summary.md  2603.18662v1_summary.md  2603.18669v1_summary.md  2603.18683v1_summary.md  2603.18712v1_summary.md  2603.18736v1_summary.md  2603.18743v1_summary.md  2603.18771v1_summary.md  2603.18773v1_summary.md  2603.18784v1_summary.md  2603.18788v1_summary.md  2603.18795v1_summary.md  2603.18811v1_summary.md  2603.18815v1_summary.md  2603.18859v1_summary.md  2603.18871v1_summary.md  2603.18892v1_summary.md
arxiv-eai-daily/arxiv_eai_daily_20260320_0942/translations/: 2603.18363v1_translation.txt  2603.18370v1_translation.txt  2603.18396v1_translation.txt  2603.18400v1_translation.txt  2603.18408v1_translation.txt  2603.18418v1_translation.txt  2603.18428v1_translation.txt  2603.18444v1_translation.txt  2603.18462v1_translation.txt  2603.18472v1_translation.txt  2603.18480v1_translation.txt  2603.18494v1_translation.txt  2603.18495v1_translation.txt  2603.18508v1_translation.txt  2603.18520v1_translation.txt  2603.18523v1_translation.txt  2603.18532v1_translation.txt  2603.18545v1_translation.txt  2603.18558v1_translation.txt  2603.18577v1_translation.txt  2603.18620v1_translation.txt  2603.18627v1_translation.txt  2603.18656v1_translation.txt  2603.18662v1_translation.txt  2603.18669v1_translation.txt  2603.18683v1_translation.txt  2603.18712v1_translation.txt  2603.18736v1_translation.txt  2603.18743v1_translation.txt  2603.18771v1_translation.txt  2603.18773v1_translation.txt  (+8 more)
arxiv-eai-daily/core/: analyzer.py  arxiv_client.py  pdf_processor.py  translator.py
arxiv-embodied-ai-summarizer/: INSTALL.md  README_SKILL.md  config.yaml  main.py  pyproject.toml  requirements.txt  skill.yaml
arxiv-embodied-ai-summarizer/core/: __init__.py  analyzer.py  claude_analyzer.py  config.py  output_manager.py  pdf_processor.py
