[project]
name = "arxiv-embodied-ai-summarizer"
version = "1.0.0"
description = "智能Arxiv论文总结工具 - 专注于具身AI/机器人学习论文的自动化分析"
authors = [
    {name = "Seveir Bian", email = "seveir.bian@example.com"}
]
readme = "README_SKILL.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.8"
keywords = ["arxiv", "ai", "robotics", "embodied-ai", "research", "pdf", "translation", "summarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core dependencies
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "PyMuPDF>=1.21.0",
    "Pillow>=9.0.0",
    "PyYAML>=6.0",
    "feedparser>=6.0.0",
    # Async support for concurrent downloads
    "aiohttp>=3.8.0",
    "aiofiles>=0.8.0",
    # Translation services
    "deep-translator>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/seveir/arxiv-embodied-ai-summarizer"
Repository = "https://github.com/seveir/arxiv-embodied-ai-summarizer.git"
Issues = "https://github.com/seveir/arxiv-embodied-ai-summarizer/issues"

[project.scripts]
arxiv-summarizer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
include = [
    "main.py",
    "config.yaml",
    "skill.yaml",
]

[dependency-groups]
dev = [
    # Development tools
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.0.0",
    "mypy>=0.991",
    # Optional dependencies for enhanced functionality
    "jupyter>=1.0.0",
]

[tool.uv.sources]
# Allow pre-release versions for cutting-edge dependencies
# deep-translator = { index = "https://pypi.org/simple" }

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
